# VTCast

./: .env.example  .gitignore  Cargo.toml  README.md  relay.Dockerfile
crates/capture/: Cargo.toml
crates/capture/src/: d3d11.rs  dda.rs  lib.rs  protocol.rs  wgc.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/relay/: Cargo.toml
crates/relay/assets/: receiver.html  test_rtc.html
crates/relay/src/: main.rs  room.rs  turn.rs  ws.rs
crates/sender/: Cargo.toml
crates/sender-app/: Cargo.toml  build.rs  tauri.conf.json
crates/sender-app/capabilities/: main.json
crates/sender-app/src/: main.rs
crates/sender-app/ui/: index.html
crates/sender/src/: encoder.rs  gpu_convert.rs  lib.rs  main.rs  mf_encoder.rs  nvenc.rs  packer.rs  publisher.rs  resize.rs  sysprio.rs
poc1/: gen_test_image.py  index.html  verify_alpha.py
scripts/: smoke_ws.py
