[package]
name = "vtcast-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vtcast-relay"
path = "src/main.rs"

[dependencies]
vtcast-protocol = { path = "../protocol" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

dotenvy = "0.15"
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["trace"] }
futures-util = "0.3"
rand = "0.9"
parking_lot = "0.12"
async-trait = "0.1"
webrtc = "0.14"
bytes = "1"
